--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "19.2.3",
     "react-grid-layout": "^2.1.1",
     "react-hook-form": "^7.69.0",
+    "socket.io-client": "^4.8.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.2.1",
